# pdms-omni

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  build_errors.txt  dev.ps1
dashboard/: .env.development  .gitignore  app.js  index.html  package-lock.json  package.json  style.css  vite.config.js
dashboard-ts/: .gitignore  PLAN.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard-ts/src/: App.tsx  index.css  main.tsx
dashboard-ts/src/application/hooks/: use-auth.ts  use-cylinder-config.ts  use-scada-view-model.ts  use-serial-status.ts  use-telemetry.ts  use-therapies.ts
dashboard-ts/src/application/stores/: auth-store.ts  index.ts  serial-store.ts  telemetry-store.ts  theme-store.ts
dashboard-ts/src/application/utils/: signal-configs.ts  time.ts
dashboard-ts/src/domain/entities/: equivalence.ts  patient.ts  serial-status.ts  signal.ts  telemetry-reading.ts  therapy.ts  user.ts
dashboard-ts/src/domain/repositories/: auth-repository.ts  equivalence-repository.ts  patient-repository.ts  serial-repository.ts  signal-repository.ts  (+2 more)
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/application/: useCylinderConfig.js  useSerialStatus.js  useTelemetry.js
dashboard/src/infrastructure/: api.js  socket.js  time.js
dashboard_old/: app.js  style.css
docs/: alcance-multi-maquina.md
src/: main.rs
src/application/: use_cases.rs
src/domain/: device.rs  entities.rs  mod.rs  repositories.rs
src/infrastructure/: auth.rs  config.rs  database.rs  db_pool.rs  equivalences_data.rs  http_api.rs  logger.rs  mod.rs  mssql_repository.rs  null_repository.rs  persistence_helpers.rs  postgres_repository.rs  repo_dispatch.rs  serial_communicator.rs  serial_manager.rs  sqlite_repository.rs  sqlx_repository.rs  websocket_server.rs
(+118 files in other folders)
