[package]
name = "pdms-omni"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
byteorder = "1.5.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "any", "macros", "chrono"] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono"] }
bb8 = "0.8"
bb8-tiberius = "0.15"
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.9.0"
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "sync"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4.44", features = ["serde"] }
