[package]
name = "pdms-omni"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
dotenvy = "0.15.7"
argon2 = "0.5"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono"] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono"] }
bb8 = "0.8"
bb8-tiberius = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.9.0"
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "sync", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
